# Strata

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
agent/reme_light_job_agent_v2/: advanced_memory_manager.py  clarification_gate.py  eval.py  file_parser.py  job_agent.py  profile_manager.py  tools.py  utils.py
docs/: architecture.md
experiments/: README.md  ablation_study.py
experiments/dataset/: dataset_full.json  dataset_gt_v2_type_B.json  dataset_gt_v2_type_C.json  dataset_gt_v3_type_B.json  dataset_gt_v3_type_C.json  dataset_large_pool_type_B.json  dataset_large_pool_type_C.json  dataset_stats.json  dataset_type_A.json  dataset_type_B.json  dataset_type_C.json  generate_dataset.py  global_memory_pool.json
experiments/results/: results.json
memory/file_based/components/: compactor.py  summarizer.py
memory/file_based/tools/: memory_search.py
memory/file_based/utils/: as_msg_handler.py
